完善登录页

--- a/login.html
+++ b/login.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>登录</title>
 </head>
 <body>
     <div id="login"></div>
-    <script src="/dist/build.js"></script>
+    <script src="/dist/login.js"></script>
 </body>
 </html>
