新增侧边导航栏以及路由的实现

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>crm</title>
+    <link rel="stylesheet" href="./src/assets/css/common.css">
     <style>
       #app {
         height: 100vh;
