添加值班信息管理及个人信息管理

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>crm</title>
+    <title>康德医院排班系统</title>
     <link rel="stylesheet" href="./src/assets/css/common.css">
     <style>
       #app {
